2009-07-17  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=25523
        [GTK] The text displayed by push buttons is not exposed to assistive technologies

        Add new public method text() to RenderButton and use it from
        AccessibilityRenderObject::stringValue().

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::stringValue):
        * rendering/RenderButton.cpp:
        (WebCore::RenderButton::text):
        * rendering/RenderButton.h:

Canonical link: https://commits.webkit.org/37701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46080 268f45cc-cd09-0410-ab3c-d52691b4dbfc