WebCore/rendering/RenderButton.h
@@ -55,7 +55,8 @@ public:
     virtual IntRect controlClipRect(int /*tx*/, int /*ty*/) const;
 
     void setText(const String&);
-    
+    String text() const;
+
     virtual bool canHaveChildren() const;
 
 protected:
